# promethor

./: README.md  Readme.rst  requirements.txt  setup.cfg  setup.py  tox.ini
collectors/: __init__.py  logger.py  lvm_collector.py  main.py  mongo_collector.py  sentry_events_collector.py  sql_collector.py  sql_queries_collector.py  utils.py
etc/: mongo.yml  sentry.yml  sql.yml
