[metadata]
name = promethor
version = 1.1.2
summary = This is a bunch of custom prometheus collectors.
description-file =
    Readme.rst
author = Daniil Trishkin
author-email = asteroid566@gmail.com
home-page = https://github.com/FromZeus/promethor
classifier =
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7

[files]
packages =
    collectors

[entry_points]
console_scripts =
    promethor = collectors.main:main

[wheel]
universal = 1
